Fix wrap-guide

--- a/index.less
+++ b/index.less
@@ -22,7 +22,7 @@ atom-text-editor, :host {
     .syntax-guide-color();
   }
 
-  .wrap-guide {
+  &::shadow .wrap-guide, .wrap-guide {
     .syntax-guide-background();
   }
 
